# polycodes

./: Cargo.toml  LICENSE  README.md  transform.py
src/: base62.rs  codes.rs  lib.rs  main.rs  tools.rs
src/tools/: mod.rs  tests.rs
src/v1/: mod.rs  tests.rs
src/v2/: mod.rs  tests.rs
src/v3/: mod.rs  tests.rs
src/v4/: mod.rs  tests.rs
src/v5/: mod.rs  tests.rs
src/v6/: mod.rs  tests.rs
