[package]
name = "polytrack-codes"
version = "0.2.0"
edition = "2024"
authors = ["Ireozar <ireo@ireo.xyz>", "GameBuilder202 <unkown.sr71@gmail.com>"]
license = "MIT"
description = "Collection of utilities to work with PolyTrack's track codes"
repository = "https://codeberg.org/ireozar/polycodes"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
facet = "0.30.0"
facet-json = "0.30.0"
flate2 = { version = "1.1.4", default-features = false, features = ["zlib-rs"] }
num_enum = "0.7.5"
sha256 = "1.6.0"
